<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".countActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTitle_type"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type"
                android:textAlignment="center"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/textTitle_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/text_plus"
                android:textAlignment="viewEnd"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/textTitle_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/text_minus"
                android:textAlignment="viewEnd"
                android:textSize="12pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type0"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView0_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView0_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type1"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView1_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView1_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView2_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView2_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type3"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView3_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView3_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type4"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView4_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView4_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type5"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView5_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView5_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/textView_type6"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView6_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView6_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type7"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type7"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView7_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView7_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="10pt" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>